# symlegion

./: .gitignore  README.md  logs.md  pyproject.toml  symlegion.py
.github/workflows/: ci.yml
agentlink/: cli.py  config.py  symlink.py
legion/: cli.py  config.py
tests/: test_config.py  test_integration.py  test_symlink.py
