[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlink"
version = "0.1.0"
description = "Keep AI instruction files in sync using symlinks"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agentlink = "agentlink.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
